# etf-trading-challenge

./: .gitignore  CMakeLists.txt
configs/: default.json  live_template.json
docs/: exchange_live_protocol.md
include/etf/: analysis.hpp  core.hpp  exchange_protocol.hpp  gateway.hpp  logging.hpp  simulator.hpp  strategy.hpp
src/: analysis.cpp  core.cpp  exchange_protocol.cpp  gateway.cpp  logging.cpp  simulator.cpp  strategy.cpp
tests/: test_core.cpp  test_exchange_protocol.cpp  test_simulator.cpp  test_strategies.cpp
tools/: bench_smoke.cpp  live_bridge.mjs  main.cpp
